# e6dl-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: api.rs  errors.rs  main.rs
