[package]
name = "e6dl"
version = "0.3.0"
authors = ["TJ Horner <tj@tjtjtj.tj>"]
edition = "2018"
license = "MIT"

[profile.release]
lto = true
panic = "abort"

[dependencies]
structopt = "0.3.13"

reqwest = { version = "0.10.9", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.8"

log = "0.4.8"
pretty_env_logger = "0.4.0"

# Maybe later...
# chrono = "0.4.19"
