[package]
name = "e6dl"
description = "Batch download CLI for e621 or e926"
repository = "https://github.com/tjhorner/e6dl-rs"
version = "0.4.0"
authors = ["TJ Horner <tj@tjtjtj.tj>"]
edition = "2021"
license = "MIT"

[profile.release]
lto = true
panic = "abort"

[dependencies]
structopt = "0.3.26"

reqwest = { version = "0.11.10", features = ["json", "stream"] }
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.21"

log = "0.4.17"
pretty_env_logger = "0.4.0"

# Maybe later...
# chrono = "0.4.19"
